Fix some style errors (mainly z-indexes)

--- a/main.css
+++ b/main.css
@@ -354,6 +354,7 @@ div.smoothie-chart-tooltip {
 .tooltip {
     position: absolute;
     float: left;
+    z-index: 2;
 }
 
 .video {
